fix: update helpers for facebook style bubbles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1998,10 +1998,10 @@ OM = _omsg
             }
 
             /// Helpers.
-            bubble  = '._28DtS'
-            system  = '._2qhWD, ._9WQEN'
-            sticker = '._3ToB1'
-            forward = '._29g--'
+            bubble  = '._2rBI0'
+            system  = '._3ASsl, .XFAMv'
+            sticker = '._159mM'
+            forward = '._1RAno'
 
             /// Shared styles.
             &-in, &-out {
