chore: remove redundant vars from scrollbars

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1073,8 +1073,8 @@ OM = _omsg
                 scrollbar-color: ac2 var(--shadow) i
             }
             &::-webkit-scrollbar {
-                &-thumb { c: 0 0 ac2 i }
-                &-track { c: 0 0 var(--shadow) i }
+                &-thumb { c: 0 0 ac2 }
+                &-track { c: 0 0 var(--shadow) }
             }
         }
 
