fix: update bad selector for 'sticker' helper

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2003,7 +2003,7 @@ OM = _omsg
             /// Helpers.
             bubble  = '._2rBI0'
             system  = '._3ASsl, .XFAMv'
-            sticker = '._159mM'
+            sticker = '._2JswF'
             forward = '._1RAno'
 
             /// Shared styles.
