fix: update selectors for media elements

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1945,9 +1945,9 @@ OM = _omsg
     .message {
         /// 1, 2:    External video/link
         /// 3, 4, 5: Reply, Gif, Document
-        /// 6, 7:    Grouped image/video
+        /// 6, 7:    (Grouped) images/videos
         /// 8:       Google Maps
-        md = '._1t3gq, .SjSeX, ._2iML2, ._15rLL, ._3_4_I, .Yik3W, .va0ao, ._3B7f_'
+        md = '._1d7uX, ._WnqL, .i8New, .QnPmY, ._20adz, ._1mTER, .-xSc5, ._1VzZY'
         /// 1:   Messages
         /// 2:   Videos
         /// 3-5: Images/gifs/stickers
@@ -2009,20 +2009,20 @@ OM = _omsg
                 /// Fix rounded corners for forward button.
                 &:not(#z) { forward }:not(#z) { rad: _o i }
 
-                /// Fix rounded corners for videos/images in grouped media.
-                &:not(#z) ._269XL._3sKvP.wQZ0F { .va0ao, .Yik3W { rad: _o i }}
+                /// Fix rounded corners for images/videos in grouped media.
+                &:not(#z) ._3dejV._2XJpe._7M8i6 { ._1mTER, .-xSc5 { rad: _o i }}
 
                 /// Fix rounded corners for alerts in Google Maps messages.
                 /// NOTE: Hard-coded; adding more logic for this makes no sense.
-                .YQVY1 { rad: _o _o 0 0 i }
-                ._4Dkba { rad: 0 0 _o _o i }
+                .SpdXA { rad: _o _o 0 0 i }
+                .fMR4l { rad: 0 0 _o _o i }
 
                 /// Increase padding-right for bubbles.
-                &:not(.serpP) ._274yw {
+                &:not(._2FNAC) ._1dB-m {
                     padding-right: 9px i
 
                     /// Fix margin for replies.
-                    ._3AFCK { margin-right: -6px }
+                    ._3fs13 { margin-right: -6px }
                 }
 
                 /// Rounded timestamps.
