--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1993,6 +1993,7 @@ OM = _omsg
             system  = '._3ASsl, .XFAMv'
             sticker = '._2JswF'
             forward = '._1RAno'
+            context = '._2_CMk'
 
             /// Shared styles.
             &-in, &-out {
@@ -2031,14 +2032,12 @@ OM = _omsg
 
             /// Incoming messages.
             &-in {
-                ._1ohds { border-top-right-radius: _m i }
+                { context } { border-top-right-radius: _m i }
                 /// First message -> In/Out/System messages.
                 &, ../-out, /{ system } {
                     &:not({ bubble }) + .message-in{ bubble } {
                         // c: 0 0 #ff55550a
                         > div > div, { md }, { sticker } { rad: left_top }
-                        /// Media context menu.
-                        ._20EE3 { rad: 0 _m 0 0 i }
                     }
                 }
                 /// Messages in between.
@@ -2046,6 +2045,7 @@ OM = _omsg
                     // c: 0 0 #55ff550a
                     { md } { rad: left_med }
                     > div > div, { sticker } { rad: left_mid }
+                    { context } { border-top-right-radius: _i i }
                 }
                 /// Last message.
                 &{ bubble } + .message-in:not({ bubble }) {
@@ -2059,14 +2059,12 @@ OM = _omsg
 
             /// Outgoing messages.
             &-out {
-                ._1ohds { border-top-right-radius: _o i }
+                { context } { border-top-right-radius: _o i }
                 /// First message -> In/Out/System messages.
                 &, ../-in, /{ system } {
                     &:not({ bubble }) + .message-out{ bubble } {
                         // c: 0 0 #ff55551a
                         > div > div, { md } { rad: right_top }
-                        /// Media context menu.
-                        ._20EE3 { rad: 0 _m 0 0 i }
                     }
                 }
                 /// Messages in between.
@@ -2074,13 +2072,13 @@ OM = _omsg
                     // c: 0 0 #55ff551a
                     { md } { rad: right_med }
                     > div > div { rad: right_mid }
-                    /// Context menu.
-                    ._1ohds { border-top-right-radius: _i i }
+                    { context } { border-top-right-radius: _i i }
                 }
                 /// Last message.
                 &{ bubble } + .message-out:not({ bubble }) {
                     // c: 0 0 #5555ff1a
                     > div > div, { md } { rad: right_end }
+                    { context } { border-top-right-radius: _i i }
                 }
 
                 /// Feat -> Outgoing message bubble position.
