--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2205,7 +2205,7 @@ OM = _omsg
                     z-index: 0 i
 
                     /// Add whitespace to avoid timestmap collision.
-                    if (tail_style != 'fb-like') {
+                    if (tail_style = 'fb-like') {
                         padding-bottom: 0.8rem i
                     }
 
