fix: update selectors for maps
If "--blue-ocean" is used elsewhere, this will have to be more specific.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -449,6 +449,8 @@ OM = _omsg
         --teal-lighter-rgb: var(--ac-2) //0,191,165;
         --green-deep: var(--ac-3) //#1b9a59;
         --green-deep-rgb: var(--ac-3-rgb) //27,154,89;
+        --blue-ocean: var(--bg-2) //#aadaff;
+        --blue-ocean-rgb: var(--bg-2-rgb) //#aadaff;
         --active-tab-marker: var(--ac-0) //#00af9c;
         --active-tab-marker-rgb: var(--ac-0-rgb) //0,175,156;
         --app-background-stripe: var(--bg-1) //#091e1f;
@@ -2265,10 +2267,6 @@ OM = _omsg
             }
         }
 
-        /// Map loading background.
-        /// NOTE: Made it transparent so it stops flashing.
-        /._3UG7w:not(#z) > div[style] { c: 0 0 t }
-
         /// Map controls.
         [controlwidth = '40'] * {
             filter: invert(0.9) i
@@ -2283,9 +2281,9 @@ OM = _omsg
         .BPkae { border-top-color: var(--modal-background) i }
 
         /// Location pin.
-        ._2T2Fj { c: 0 0 ac1 }
+        ._3Q8RX { c: 0 0 ac1 }
 
         /// Footer border.
-        /.VK7yK { box-shadow: 0 -1px bg5 i }
+        /._3nNEI { box-shadow: 0 -1px bg3 i }
     }
 }
