fix: update selectors for various misc elements

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -971,7 +971,7 @@ OM = _omsg
         &, button, input { font-family: var(--ui-font) }
 
         /// Toast notifications.
-        ._11dpe {
+        ._2-NDv {
             c: fg1
             border: 1px solid bg5 i
             button:nth-child(2) { c: ac1 }
@@ -1018,7 +1018,7 @@ OM = _omsg
         }
 
         /// Settings -> Tweaks for 'Set Chat Wallpaper' area. #149
-        /._3lqL6 {
+        /._1wlMU {
             position: relative
 
             /// Override selected wallpaper.
@@ -1037,7 +1037,7 @@ OM = _omsg
 
             /// Expand default chat wallpaper.
             &:first-child {
-                &:not(._1rIeG) { border: 4px solid bg2 i }
+                &:not(._2ILMM) { border: 4px solid bg2 i }
                 &, &::after { width: calc(3 * 82px + 30px) i }
                 span {
                     font-size: 0 i
@@ -1057,7 +1057,7 @@ OM = _omsg
         }
 
         /// Global -> Scrollbar styles.
-        /\*{
+        /\* {
             /// Scrollbar colors.
             @supports (scrollbar-width: thin) {
                 scrollbar-color: ac2 var(--shadow) i
@@ -1210,7 +1210,7 @@ OM = _omsg
         }
 
         /// 'Allow notifications' modal.
-        &._3Os9f {
+        &._2s66d._3QE0O {
             c: 0 0 var(--modal-backdrop)
             [data-animate-modal-popup] {
                 padding: 16px i
@@ -1550,7 +1550,7 @@ OM = _omsg
                     overflow: hidden i
                     > div { transition: background, filter 300ms ease-in-out i }
                     &:not(:hover) > div { filter: blur(6px) }
-                    &._1f1zm, &:hover { filter: blur(0px) }
+                    &:hover { filter: blur(0px) }
                 }
             }
         }
@@ -1836,8 +1836,6 @@ OM = _omsg
 
                 /// Items.
                 ._1C6Zl {
-                    // c: 0 0 #f111
-
                     /// Remove whitespace from icons.
                     ._2Q3SY { margin: 0 i }
 
