--- a/wa.user.styl
+++ b/wa.user.styl
@@ -789,7 +789,7 @@ OM = _omsg
         --ptt-green-rgb: var(--b4-rgb) //9,210,97;
         --ptt-message-blue: var(--b6-0) //#68bbe4;
         --ptt-message-blue-rgb: var(--b6-0-rgb) //104,187,228;
-        --quick-action-button: to_rgba('fg-3', 0.5) //#f1f1f280;
+        --quick-action-button: to_rgba('fg-3', 0.8) //#f1f1f280;
         --quick-action-button-rgb: var(--fg-3-rgb) //241,241,242;
         --quick-action-button-background: var(--bg-4) //#080e1299;
         --quick-action-button-background-rgb: var(--bg-4-rgb) //8,14,18;
@@ -1983,7 +1983,7 @@ OM = _omsg
             bubble  = '._2rBI0'
             system  = '._3ASsl, .XFAMv'
             sticker = '._2JswF'
-            forward = '._1RAno'
+            forward = '._1ubAk'
             context = '._2_CMk'
 
             /// Shared styles.
