docs: revise code comments

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2142,7 +2142,7 @@ OM = _omsg
                     padding-bottom: 0.8rem i
                 }
 
-                /// Hide timemstamps.
+                /// Hide timestamps.
                 &{ bubble } {
                     // c: 0 0 #ff555508
                     { rtl }, { ltr }, { big } { transition: padding 0.2s ease i }
@@ -2196,7 +2196,7 @@ OM = _omsg
                     padding-top: 2px i
                     z-index: 0 i
 
-                    /// Add whitespace to avoid timestmap collision.
+                    /// Add whitespace to avoid timestamp collision.
                     if (tail_style = 'fb-like') {
                         padding-bottom: 0.8rem i
                     }
