--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.3.0
+@version      3.4.0
 @license      MIT
 @preprocessor stylus
 
@@ -351,12 +351,12 @@ OM = _omsg
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 3.3.0 — November 1st, 2020'
+        --version: '🌚 Dark-WhatsApp 3.4.0 — November 21st, 2020'
         --message: 'The v3 is here! 🎉 I wrote a blog post about it here: ' + \
                    'https://vednoc.me/blog/next-gen-of-dark-whatsapp \A\A' + \
                    'I started working on an alternative to USo, currently' + \
-                   ' in very early stages: https://userstyles.world 👀  \A\A' + \
-                   'Read more about v3, as always, in the project changelog:'
+                   ' in very early stages: https://userstyles.world 👀 \A\A' + \
+                   'More about v3.4.0 update, as always, in the changelog:'
         --changes: '\A https://github.com/vednoc/dark-whatsapp\A\A\A' + \
                    'P.S. CSS can not add links, only fake/pseudo text.'
 
