fix: resolve a conflict in forward msg modal
The selector used for items in forward message modal is also used when
viewing your own avatar, which resets a bug on upstream, so this makes
the reset a lot more specific.

Thanks to Erel for reporting this!

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1145,7 +1145,7 @@ OM = _omsg
             }
 
             /// Fix header onflicts.
-            ../ ._3Pwfx { c: 0 0 t }
+            ../ ._3Pwfx._2jw57 { c: 0 0 t }
         }
 
         /// Add borders.
