feat: add an option to hide profile pictures
Closes #183.

--- a/metadata.styl
+++ b/metadata.styl
@@ -167,6 +167,9 @@ rtl_header = 1
 // Fix formatting for RTL messages.
 rtl_format = 1
 
+// Hide profile pictures.
+chat_h_p_p = 0
+
 // Blur contacts drawer.
 chat_b_c = 0
 
