fix: update selector for external links
Looks like only this selector was changed in the latest update.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1945,7 +1945,7 @@ OM = _omsg
         /// 3, 4, 5: Reply, Gif, Document
         /// 6, 7:    (Grouped) images/videos
         /// 8:       Google Maps
-        md = '._1d7uX, ._WnqL, .i8New, .QnPmY, ._20adz, ._1mTER, .-xSc5, ._1VzZY'
+        md = '._1d7uX, ._3JHdl, .i8New, .QnPmY, ._20adz, ._1mTER, .-xSc5, ._1VzZY'
         /// 1:   Messages
         /// 2:   Video timestamp/length
         /// 3-5: Images/gifs/stickers
