fix: update selectors for rounded avatars

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1093,17 +1093,17 @@ OM = _omsg
     }
 
     // Feat -> Rounded corners for avatars.
-    ._1l12d[style] {
+    .-y4n1[style] {
         /// Global/shared contacts.
         &, /._3PdFH { c: 0 0 bg5 }
 
-        /// Avatars/images/new group/shared contacts/contact avatar.
-        &, > img, /._3I3b7, /._3PdFH, /._1huBh, /._3JaPz {
+        /// Avatars/images/new group/contact avatar/your avatar.
+        &, > img, /._2qsE7, /._1_JE6 /.JRQje, /._28-ha {
             rad: var(--r-avatars) i
         }
 
         /// Add rounded corners to the default group SVG avatar.
-        /._3JaPz { c: 0 0 bg5 }
+        /._1Gyz6 { c: 0 0 bg5 }
 
         /// Fix 'New group' bottom divider to hide drawer background-color.
         /[data-list-scroll-offset] > div:first-child > div:last-child {
