--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1335,7 +1335,7 @@ OM = _omsg
         }
 
         /// Feat -> Input border radius.
-        ._2Evw0 { rad: var(--r-inputs) i }
+        .RPX_m { rad: var(--r-inputs) i }
 
         /// Dropdowns -> Chat/Header.
         > span > div, ._3nLE_ {
@@ -1387,15 +1387,15 @@ OM = _omsg
         &::after { content: unset i }
 
         /// Search.
-        /._22PcK {
+        /._3LX7r {
             c: 0 0 bg2
             border-bottom: 1px solid bg5 i
             label { box-shadow: inset 0 0 0 1px bg4 }
             &::after { display: none i }
-            &._30SFc { box-shadow: var(--bshadow) }
+            &._1brJQ { box-shadow: var(--bshadow) }
 
-            /// Remove animation.
-            /._1yO24 { animation: none i }
+            /// Remove animation. TODO: Not needed?
+            // /._1yO24 { animation: none i }
         }
 
         /// Left -> Resets.
@@ -1718,7 +1718,7 @@ OM = _omsg
             }
 
             /// Feat -> Input border radius.
-            .DuUXI { rad: var(--r-inputs) i }
+            ._2A8P4 { rad: var(--r-inputs) i }
         }
 
         /// Fix styles for Google Maps.
