fix: update selectors for dropdowns and popovers

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1338,7 +1338,7 @@ OM = _omsg
         .RPX_m { rad: var(--r-inputs) i }
 
         /// Dropdowns -> Chat/Header.
-        > span > div, ._3nLE_ {
+        > span > div, ._1qAEq {
             &[style ^= 'transform-origin:'][tabindex] {
                 box-shadow: var(--bshadow) i
                 border: 1px solid bg4
@@ -1347,9 +1347,12 @@ OM = _omsg
         }
 
         /// Floating emoji picker.
-        > span > ._3nLE_ {
+        > span > ._2iHK1 {
             border: 1px solid bg5 i
             box-shadow: var(--bshadow) i
+
+            /// Remove borders.
+            ._3ob6-, ._1BMu5 { border-left: none i }
 
             > [data-animate-dropdown-nib] {
                 border-bottom: 1px solid bg5
