--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1145,13 +1145,13 @@ OM = _omsg
     .overlay {
         /// Media/Avatar viewers have different headers. @upstream
         /[data-animate-media-viewer] {
-            > div:first-child, ../ ._2CDVd {
+            > div:first-child, ../ ._3ZxL8 {
                 border-bottom: 1px solid bg5 i
                 c: 0 0 bg2
             }
 
-            /// Fix header onflicts.
-            ../ ._3Pwfx._2jw57 { c: 0 0 t }
+            /// Fix header conflicts.
+            ../ ._2Z4DV._3nJaS { c: 0 0 t }
         }
 
         /// Add borders.
@@ -1175,7 +1175,7 @@ OM = _omsg
         }
 
         /// Fix media selection.
-        /._17JJa { c: 0 bg5 bg2 }
+        /._1O9tq { c: 0 bg5 bg2 }
 
         /// Status area modal.
         /[data-animate-status-v3-modal-background = 'true'] {
@@ -1216,7 +1216,7 @@ OM = _omsg
         }
 
         /// 'Allow notifications' modal.
-        &._2s66d._3QE0O {
+        &._3pCPi._1814Z {
             c: 0 0 var(--modal-backdrop)
             [data-animate-modal-popup] {
                 padding: 16px i
