fix: update selectors on landing page

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1278,14 +1278,14 @@ OM = _omsg
                 [role='button'] { c: white 0 ac0 }
 
                 /// Change white border when inactive.
-                &.UlvkP {
+                &._267ZZ {
                     outline: 4px solid ac0
                     box-shadow: 0 0 0 4px ac0
                 }
             }
 
             /// Video tutorial.
-            + ._3bA0V {
+            + div {
                 c: 0 0 t
                 img { opacity: 0.3 }
                 /// Reset background on button container.
@@ -1293,7 +1293,7 @@ OM = _omsg
             }
 
             /// 'Keep me signed in' tooltip. #59
-            ._1jxi5 {
+            ._2-pPz {
                 c: white 0 ac0
                 box-shadow: bsh
                 &::before { border-bottom-color: ac0 i }
