chore: resolve compile error and remove old style

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1098,7 +1098,7 @@ OM = _omsg
         &, /._3PdFH { c: 0 0 bg5 }
 
         /// Avatars/images/new group/contact avatar/your avatar.
-        &, > img, /._2qsE7, /._1_JE6 /.JRQje, /._28-ha {
+        &, > img, /._2qsE7, /._1_JE6, /.JRQje, /._28-ha {
             rad: var(--r-avatars) i
         }
 
@@ -1396,9 +1396,6 @@ OM = _omsg
             label { box-shadow: inset 0 0 0 1px bg4 }
             &::after { display: none i }
             &._1brJQ { box-shadow: var(--bshadow) }
-
-            /// Remove animation. TODO: Not needed?
-            // /._1yO24 { animation: none i }
         }
 
         /// Left -> Resets.
