fix: update selectors in left and right panes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1426,11 +1426,11 @@ OM = _omsg
             border-left: 1px solid bg5 i
 
             /// Remove shadows from drawer sections.
-            /._32vnm { box-shadow: 0 0 0 1px bg4 i }
+            /._3ZEdX { box-shadow: 0 0 0 1px bg4 i }
 
             /// Remove native dark mode dividers.
             /.dark .three {
-                #main > *, ._26MUt { border-right: none i }
+                #main > *, ._1gL0z { border-right: none i }
             }
         }
 
@@ -1727,7 +1727,7 @@ OM = _omsg
         }
 
         /// Fix unread messages in dark mode. @upstream
-        /.dark .vwouH ._1c_mC ._2gsiG { c: var(--secondary-stronger) }
+        /.dark ._1V5O7 ._2pkLM ._15smv { c: var(--secondary-stronger) }
 
         /// Groups -> Fix opacity for nicknames.
         /[class *= ' color-'] > span:nth-child(2) { c: fg3 }
