fix: update selectors for system messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1567,15 +1567,15 @@ OM = _omsg
         }
 
         /// System messages.
-        .KpuSa {
+        ._2kR4B {
             border: 1px solid b63
             text-shadow: none i
 
             /// End-to-end encryption message.
-            &._1N_HH { border: 1px solid b34 }
+            &._1KcEQ { border: 1px solid b34 }
 
             /// Bussiness account message.
-            &._1C8gB { border: 1px solid b54 }
+            &._3nwTJ { border: 1px solid b54 }
         }
 
         /// Loading previous messages / Jump to new messages.
