fix: update selectors in chat area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1579,7 +1579,7 @@ OM = _omsg
         }
 
         /// Loading previous messages / Jump to new messages.
-        ._3bfj9, ._3DmTD { border: 1px solid bg5 }
+        ._3M4BR, ._2wFt8 { border: 1px solid bg5 }
 
         /// Feat -> Custom chat background.
         /[data-asset-chat-background-dark],
@@ -1596,18 +1596,18 @@ OM = _omsg
         }
 
         /// Tweak 'unread messages' alert.
-        .XFAMv { border: none i }
+        ._2WwJ0 { border: none i }
 
         /// Tweak box-shadow for message bubbles.
         [class *= 'message-'][data-id] {
             /// Exclude stickers.
-            > span + div:not(._31W3v) > div {
+            > span + div:not(._3nuWB) > div {
                 box-shadow: 0 1px 0 to_rgba('shadow', 0.2) i
             }
         }
 
         /// Fix context menu background for stickers.
-        ._1qGcR + div[style] { c: 0 0 bg4 }
+        .QhSbI + div[style] { c: 0 0 bg4 }
 
         /// Add background to media message timestamps.
         /[style *= 'width'][style *= 'height'] + div {
@@ -1712,7 +1712,7 @@ OM = _omsg
             }
 
             /// Chat -> Select messages.
-            + span > .yVipa {
+            + span > ._2ngbn {
                 border-top: 1px solid bg5 i
                 border-left: 1px solid bg5 i
             }
