feat: add override option for system message color
Closes #184.

--- a/metadata.styl
+++ b/metadata.styl
@@ -143,6 +143,12 @@ ow_ack = 0
 // Seen message icon color.
 _ack = #ff6666
 
+// Override system message background color.
+ow_sys_msg = 0
+
+// System message background color
+sys_msg_bg = #364462
+
 // Override incoming message bubble color.
 ow_imsg = 0
 
