--- a/wa.user.css
+++ b/wa.user.css
@@ -6,15 +6,15 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.5.0
+@version      3.6.0
 @license      MIT
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
   :root:not(#z),
   .dark:not(#z) {
-    --version: '🌚 Dark-WhatsApp Lite 3.5.0 — December 10th, 2020';
-    --message: 'The v3 is here! 🎉 I wrote a blog post about it here: https://vednoc.me/blog/next-gen-of-dark-whatsapp \A\AI started working on an alternative to USo, currently in very early stages: https://userstyles.world 👀 \A\AMore about v3.5.0 update, as always, in the changelog:';
+    --version: '🌚 Dark-WhatsApp v3.6.0 — February 26th, 2021';
+    --message: 'Hi there! Since I quit WA a while ago, and also been busy working on a rewrite for UserStyles.world (as a replacement for USo), I am looking for someone to help maintainin DWA.\A\ALink to USw: https://userstyles.world 👀 \A\AMore about v3.6.0 update, as always, in the changelog:';
     --changes: '\A https://github.com/vednoc/dark-whatsapp\A\A\AP.S. CSS can not add links, only fake/pseudo text.';
     --ui-font: 'font_name', Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif;
     --r-menus: 4px;
@@ -800,19 +800,19 @@
   ::-webkit-progress-value {
     background-color: var(--ac-0) !important;
   }
-  ._1l12d[style],
+  .-y4n1[style],
   ._3PdFH {
     background-color: var(--bg-5) !important;
   }
-  ._1l12d[style],
-  ._1l12d[style] > img,
-  ._3I3b7,
-  ._3PdFH,
-  ._1huBh,
-  ._3JaPz {
+  .-y4n1[style],
+  .-y4n1[style] > img,
+  ._2qsE7,
+  ._1_JE6,
+  .JRQje,
+  ._28-ha {
     border-radius: var(--r-avatars) !important;
   }
-  ._3JaPz {
+  ._1Gyz6 {
     background-color: var(--bg-5) !important;
   }
   [data-list-scroll-offset] > div:first-child > div:last-child {
@@ -834,11 +834,11 @@
     box-shadow: 0 0 0 1px var(--bg-3), 0 0 0 3px var(--ac-0) !important;
   }
   [data-animate-media-viewer] > div:first-child,
-  .overlay ._2CDVd {
+  .overlay ._3ZxL8 {
     border-bottom: 1px solid var(--bg-5) !important;
     background-color: var(--bg-2) !important;
   }
-  .overlay ._3Pwfx._2jw57 {
+  .overlay ._2Z4DV._3nJaS {
     background-color: transparent !important;
   }
   .overlay [data-animate-modal-popup] {
@@ -857,7 +857,7 @@
     --background-default: var(--bg-1);
     --background-default-hover: var(--bg-2);
   }
-  ._17JJa {
+  ._1O9tq {
     border-color: var(--bg-5) !important;
     background-color: var(--bg-2) !important;
   }
@@ -888,15 +888,15 @@
   [data-icon = 'status-v3-unread'] [fill = '#009588'] {
     fill: var(--ac-0) !important;
   }
-  .overlay._2s66d._3QE0O {
+  .overlay._3pCPi._1814Z {
     background-color: var(--modal-backdrop) !important;
   }
-  .overlay._2s66d._3QE0O [data-animate-modal-popup] {
+  .overlay._3pCPi._1814Z [data-animate-modal-popup] {
     padding: 16px !important;
     background-color: var(--bg-1) !important;
     --white-rgb: var(--fg-2-rgb);
   }
-  .overlay._2s66d._3QE0O [data-animate-modal-popup] [data-icon = 'back'] path {
+  .overlay._3pCPi._1814Z [data-animate-modal-popup] [data-icon = 'back'] path {
     fill: var(--fg-1) !important;
   }
   .landing-wrapper::before {
@@ -959,25 +959,25 @@
     color: #fff !important;
     background-color: var(--ac-0) !important;
   }
-  .landing-main div[data-ref].UlvkP {
+  .landing-main div[data-ref]._267ZZ {
     outline: 4px solid var(--ac-0);
     box-shadow: 0 0 0 4px var(--ac-0);
   }
-  .landing-main + ._3bA0V {
+  .landing-main + div {
     background-color: transparent !important;
   }
-  .landing-main + ._3bA0V img {
+  .landing-main + div img {
     opacity: 0.3;
   }
-  .landing-main + ._3bA0V [style *= 'opacity: 1'] {
+  .landing-main + div [style *= 'opacity: 1'] {
     background-color: transparent !important;
   }
-  .landing-main ._1jxi5 {
+  .landing-main ._2-pPz {
     color: #fff !important;
     background-color: var(--ac-0) !important;
     box-shadow: bsh;
   }
-  .landing-main ._1jxi5::before {
+  .landing-main ._2-pPz::before {
     border-bottom-color: var(--ac-0) !important;
   }
   #app > div::after {
@@ -1003,20 +1003,24 @@
   span div:first-child > .U7SeD::before {
     content: none;
   }
-  #app > div ._2Evw0 {
+  #app > div .RPX_m {
     border-radius: var(--r-inputs) !important;
   }
   #app > div > span > div[style ^= 'transform-origin:'][tabindex],
-  #app > div ._3nLE_[style ^= 'transform-origin:'][tabindex] {
+  #app > div ._1qAEq[style ^= 'transform-origin:'][tabindex] {
     box-shadow: var(--bshadow) !important;
     border: 1px solid var(--bg-4);
     border-radius: var(--r-menus) !important;
   }
-  #app > div > span > ._3nLE_ {
+  #app > div > span > ._2iHK1 {
     border: 1px solid var(--bg-5) !important;
     box-shadow: var(--bshadow) !important;
   }
-  #app > div > span > ._3nLE_ > [data-animate-dropdown-nib] {
+  #app > div > span > ._2iHK1 ._3ob6-,
+  #app > div > span > ._2iHK1 ._1BMu5 {
+    border-left: none !important;
+  }
+  #app > div > span > ._2iHK1 > [data-animate-dropdown-nib] {
     border-bottom: 1px solid var(--bg-5);
     border-right: 1px solid var(--bg-5);
     border-radius: 0 0 4px 0;
@@ -1038,21 +1042,18 @@
   #app > div > [tabindex]::after {
     content: unset !important;
   }
-  ._22PcK {
+  ._3LX7r {
     background-color: var(--bg-2) !important;
     border-bottom: 1px solid var(--bg-5) !important;
   }
-  ._22PcK label {
+  ._3LX7r label {
     box-shadow: inset 0 0 0 1px var(--bg-4);
   }
-  ._22PcK::after {
+  ._3LX7r::after {
     display: none !important;
   }
-  ._22PcK._30SFc {
+  ._3LX7r._1brJQ {
     box-shadow: var(--bshadow);
-  }
-  ._1yO24 {
-    animation: none !important;
   }
   #app > div > [tabindex] #side > header {
     border-bottom: 1px solid var(--bg-5) !important;
@@ -1066,11 +1067,11 @@
   #app > div > [tabindex].three > div:nth-child(2) > div:nth-child(3) {
     border-left: 1px solid var(--bg-5) !important;
   }
-  ._32vnm {
+  ._3ZEdX {
     box-shadow: 0 0 0 1px var(--bg-4) !important;
   }
   .dark .three #main > *,
-  .dark .three ._26MUt {
+  .dark .three ._1gL0z {
     border-right: none !important;
   }
   #app > div > [tabindex] > div:nth-child(2) > div:nth-child(1) > span[class] * [role][aria-selected='false'] > div {
@@ -1162,18 +1163,18 @@
   #main > header::after {
     content: unset;
   }
-  #main .KpuSa {
+  #main ._2kR4B {
     border: 1px solid var(--b6-3);
     text-shadow: none !important;
   }
-  #main .KpuSa._1N_HH {
+  #main ._2kR4B._1KcEQ {
     border: 1px solid var(--b3-4);
   }
-  #main .KpuSa._1C8gB {
+  #main ._2kR4B._3nwTJ {
     border: 1px solid var(--b5-4);
   }
-  #main ._3bfj9,
-  #main ._3DmTD {
+  #main ._3M4BR,
+  #main ._2wFt8 {
     border: 1px solid var(--bg-5);
   }
   [data-asset-chat-background-dark],
@@ -1185,13 +1186,13 @@
     background-size: var(--chat-bg-s) !important;
     opacity: 1 !important;
   }
-  #main .XFAMv {
+  #main ._2WwJ0 {
     border: none !important;
   }
-  #main [class *= 'message-'][data-id] > span + div:not(._31W3v) > div {
+  #main [class *= 'message-'][data-id] > span + div:not(._3nuWB) > div {
     box-shadow: 0 1px 0 rgba(var(--shadow-rgb), 0.2) !important;
   }
-  #main ._1qGcR + div[style] {
+  #main .QhSbI + div[style] {
     background-color: var(--bg-4) !important;
   }
   [style *= 'width'][style *= 'height'] + div._1yXJw,
@@ -1238,17 +1239,17 @@
     border-bottom: 1px solid var(--bg-5) !important;
     box-shadow: 0 -1px var(--bg-5) !important;
   }
-  #main > footer + span > .yVipa {
+  #main > footer + span > ._2ngbn {
     border-top: 1px solid var(--bg-5) !important;
     border-left: 1px solid var(--bg-5) !important;
   }
-  #main > footer .DuUXI {
+  #main > footer ._2A8P4 {
     border-radius: var(--r-inputs) !important;
   }
   #main img[src *= 'maps.googleapis.com'] {
     filter: invert(0.8) hue-rotate(180deg) !important;
   }
-  .dark .vwouH ._1c_mC ._2gsiG {
+  .dark ._1V5O7 ._2pkLM ._15smv {
     color: var(--secondary-stronger) !important;
   }
   [class *= ' color-'] > span:nth-child(2) {
@@ -1544,10 +1545,6 @@
   .message-in ._1VzZY[dir = 'ltr'] > [dir = 'ltr']::after,
   .message-out ._1VzZY[dir = 'ltr'] > [dir = 'ltr']::after {
     content: unset !important;
-  }
-  .message-in [data-pre-plain-text] > [dir = 'rtl'],
-  .message-out [data-pre-plain-text] > [dir = 'rtl'] {
-    padding-bottom: 0.8rem !important;
   }
   .message-in .selectable-text.invisible-space[dir = 'rtl'] > span[class],
   .message-out .selectable-text.invisible-space[dir = 'rtl'] > span[class] {
