fix: update selector for hidden notifications

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1421,7 +1421,7 @@ OM = _omsg
                         > div { display: none i }
                     } else if (app_alerts == 'notifications') {
                         > div { border-bottom: 1px solid bg5 i }
-                        > div._1oIRX { display: none i }
+                        > div._1Lctt { display: none i }
                     } else {
                         border-bottom: 1px solid bg5 i
                     }
